configs/istio_localization/localization.yaml
apiVersion: v1
kind: Pod
metadata:
  name: localization-api1
  labels:
    app: localization-api
    version: v1
spec:
  nodeSelector:
    kubernetes.io/arch: arm64
    cluster: rasp1
  containers:
  - name: localization-api
    image: wrathchild14/localization-reg:latest
    resizePolicy:
      - resourceName: cpu
        restartPolicy: NotRequired
      - resourceName: memory
        restartPolicy: NotRequired
    resources:
      limits:
        cpu: "500m"
        memory: 2Gi
    ports:
    - containerPort: 8000

---

apiVersion: v1
kind: Pod
metadata:
  name: localization-api2
  labels:
    app: localization-api
    version: v2
spec:
  nodeSelector:
    kubernetes.io/arch: arm64
    cluster: rasp2
  containers:
  - name: localization-api
    image: wrathchild14/localization-reg:latest
    resizePolicy:
      - resourceName: cpu
        restartPolicy: NotRequired
      - resourceName: memory
        restartPolicy: NotRequired
    resources:
      limits:
        cpu: "500m"
        memory: 2Gi
    ports:
    - containerPort: 8000

---

apiVersion: v1
kind: Pod
metadata:
  name: localization-api3
  labels:
    app: localization-api
    version: v3
spec:
  nodeSelector:
    kubernetes.io/arch: arm64
    cluster: rasp1
  containers:
  - name: localization-api
    image: wrathchild14/localization-reg:latest
    resizePolicy:
      - resourceName: cpu
        restartPolicy: NotRequired
      - resourceName: memory
        restartPolicy: NotRequired
    resources:
      limits:
        cpu: "500m"
        memory: 2Gi
    ports:
    - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: localization-service
spec:
  type: ClusterIP
  ports:
  - port: 8088
    targetPort: 8000
  selector:
    app: localization-api

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: localization-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: localization-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - localization-gateway
  http:
  - route:
    - destination:
        host: localization-service.default.svc.cluster.local
        subset: v1
        port:
          number: 8088
      weight: 10
    - destination:
        host: localization-service.default.svc.cluster.local
        subset: v2
        port:
          number: 8088
      weight: 60
    - destination:
        host: localization-service.default.svc.cluster.local
        subset: v3
        port:
          number: 8088
      weight: 30

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: localization-destination-rule
spec:
  host: localization-service.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
